--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -1,44 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        body{
-            background-image: url('img/math.jpg');
-            -webkit-background-size: cover;
-        }
-        input::placeholder {
-            color: #718096;
-            font-weight: 300;
-        }
-        input:focus{
-            outline: none;
-        }
+<%- include("../header") -%>
+    <%- include("../../public/style-login-register") -%>
 
-        .flex-100 {
-            flex: 0 1 100%;
-        }
-
-        .max-width-form {
-            max-width: 600px;
-            padding-top: 20px;
-        }
-        div#tes{
-            background-color: rgba(0,0,0, 0.6);
-            border-radius: 3%;
-        }
-        label{
-            color: white;
-        }
-    </style>
-</head>
-<body>
-
-    <div class="container mx-auto md:mt-8 mt-5">
-        <div class="mx-auto flex flex-wrap max-width-form text-gray-800" id="tes">
+    <div class="container mx-auto md:mt-8 mt-3">
+        <div class="flex justify-center mx-auto pt-2 max-w-xl">
+            <img src="img/name.png" alt="Logo" width="300" height="200">
+        </div>
+        <div class="mx-auto flex flex-wrap max-w-xl pt-5 rounded-md" id="tes">
             <!-- 	form	 -->
             <div class="flex flex-100">
                 <form class="flex-100" action="/signup" method="POST">
@@ -55,29 +22,29 @@
 
                     <div class="flex flex-100 mx-8">
                         <div class="flex-grow mr-2">
-                            <label class="block mb-1 font-bold" for="">Nombre</label>
+                            <label class="text-white block mb-1 font-bold" for="">Nombre</label>
                             <input class="bg-gray-200 w-full rounded-lg py-3 px-3 shadow-inner" type="text" name="name" id="name" required value=<%=name%> >
                         </div>
                         <div class="flex-grow ml-2">
-                            <label class="block mb-1 font-bold" for="">Apellido</label>
+                            <label class="text-white block mb-1 font-bold" for="">Apellido</label>
                             <input class="bg-gray-200 w-full rounded-lg py-3 px-3 shadow-inner" type="text" name="lastName", id="lastName" required value=<%=lastName%>>
                         </div>
                     </div>
                     <div class="flex flex-100  mx-8">
                         <div class="flex-grow mr-2 w-6/12">
-                            <label class="block mb-1 font-bold " for="">Edad</label>
+                            <label class="text-white block mb-1 font-bold " for="">Edad</label>
                             <input class="bg-gray-200 w-full rounded-lg py-3 px-3 shadow-inner" type="number" max="100" name="age", id="age" required value=<%=age%>>
                         </div>
                         <div class="flex-grow ml-2 w-6/12">
-                            <label class="block mb-1 font-bold" for="">Grado Escolar</label>
+                            <label class="text-white block mb-1 font-bold" for="">Grado Escolar</label>
                             <div>
-                                <label class="inline-flex items-center">
+                                <label class="text-white inline-flex items-center">
                                   <input type="radio" class="form-radio" name="grade" value="primaria" checked>
                                   <span class="ml-2">Primaria</span>
                                 </label>
                               </div>
                               <div>
-                                <label class="inline-flex items-center">
+                                <label class="text-white inline-flex items-center">
                                   <input type="radio" class="form-radio" name="grade" value="secundaria">
                                   <span class="ml-2">Secundaria</span>
                                 </label>
@@ -86,8 +53,8 @@
                     </div>
                     <div class="flex flex-100 mt-4  mx-8">
                         <div class="flex-grow mr-2">
-                            <label class="block mb-1 font-bold" for="">Ciudad</label>
-                            <select class="form-select block  h-12 w-full mt-1 bg-gray-200 rounded-lg shadow-inner" name="city", id="city" required>
+                            <label class="text-white block mb-1 font-bold" for="">Ciudad</label>
+                            <select class="form-select block h-12 w-full mt-1 bg-gray-200 rounded-lg shadow-inner" name="city", id="city" required>
                                 <option value="">¿De dónde eres?</option>
                                 <option value="Aguascalientes">Aguascalientes</option>
                                 <option value="Baja California">Baja California</option>
@@ -126,23 +93,23 @@
                     </div>
                     <div class="flex flex-100 mt-4 mx-8">
                         <div class="flex-grow mr-2">
-                            <label class="block mb-1 font-bold" for="">Escuela</label>
+                            <label class="text-white block mb-1 font-bold" for="">Escuela</label>
                             <input class="bg-gray-200 w-full rounded-lg py-3 px-3 shadow-inner" type="text"  name="school", id="school" required value=<%=school%>>
                         </div>
                     </div>
                     <div class="flex flex-100 mx-8">
                         <div class="flex-grow mr-2">
-                            <label class="block mb-1 font-bold" for="">Correo electrónico</label>
+                            <label class="text-white block mb-1 font-bold" for="">Correo electrónico</label>
                             <input class="bg-gray-200 w-full rounded-lg py-3 px-3 shadow-inner" type="email"  name="email", id="email" required value=<%=email%>>
                         </div>
                     </div>
                     <div class="flex flex-100 mt-4 mx-8">
                         <div class="flex-grow mr-2">
-                            <label class="block mb-1 font-bold" for="">Password</label>
+                            <label class="text-white block mb-1 font-bold" for="">Password</label>
                             <input class="bg-gray-200 w-full rounded-lg py-3 px-3 shadow-inner" type="password" name="password", id="password" required>
                         </div>
                     </div>
-                    <div class="flex flex-100 mt-4 mx-8 mb-8">
+                    <div class="flex justify-center flex-100 mt-4 mx-8 mb-8">
                         <button class="bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded" type="submit">
                             ¡Vamos!
                         </button>
