Feature: Profile and edit profile views

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -40,7 +40,11 @@
                 </form>
 
             </div>
+            <div class="text-right w-full pr-3 pb-3 text-white font-semibold underline ">
+                <a href="/signup">Crear tu cuenta</a>
+            </div>
         </div>
+        
     </div>
 
 </body>
