--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -1,11 +1,11 @@
 <%- include("../header") -%>
     <%- include("../../public/style-login-register") -%>
 
-    <div class="container mx-auto md:mt-8 mt-3">
-        <div class="flex justify-center mx-auto pt-2 max-w-xl">
+    <div class="container mx-auto md:mt-8 mt-1">
+        <div class="flex justify-center mx-auto max-w-xl">
             <img src="img/name.png" alt="Logo" width="300" height="200">
         </div>
-        <div class="mx-auto flex flex-wrap max-w-xl pt-5 rounded-md" id="tes">
+        <div class="mx-auto flex flex-wrap max-w-xl pt-2 mb-20 rounded-md" id="tes">
             <!-- 	form	 -->
             <div class="flex flex-100">
                 <form class="flex-100" action="/signup" method="POST">
@@ -117,6 +117,11 @@
                 </form>
 
             </div>
+
+            <div class="text-right w-full pr-3 pb-3 text-white font-semibold underline ">
+                <a href="/login">Inicia sesión</a>
+            </div>
+
         </div>
     </div>
 
