--- a/views/admin/addProblem.ejs
+++ b/views/admin/addProblem.ejs
@@ -25,6 +25,10 @@
                 <input type="text" name="id">
             </div>
             <div class="form-group">
+                <label>Topic:</label>
+                <input type="text" name="topic">
+            </div>
+            <div class="form-group">
                 <label>Description:</label>
                 <input type="text" name="description">
             </div>
