--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -22,7 +22,7 @@
         <div class="flex flex-col rounded-lg shadow-bg-1 shadow-lg overflow-hidden ">
           <div class="flex-1 bg-white p-6 flex flex-col justify-between pb-16">
             <div class="flex-1">
-              <a href="/problemas?grado=1" class="block">
+              <a href="/lista-problemas?grado=1" class="block">
                 <h3 class="mt-2 text-xl leading-7 font-semibold text-orange-900">
                   1º PRIMARIA
                 </h3>
@@ -36,7 +36,7 @@
         <div class="flex flex-col rounded-lg shadow-bg-2 overflow-hidden">
             <div class="flex-1 bg-white p-6 flex flex-col justify-between pb-16">
               <div class="flex-1">
-                <a href="/problemas?grado=2" class="block">
+                <a href="/lista-problemas?grado=2" class="block">
                   <h3 class="mt-2 text-xl leading-7 font-semibold text-purple-900">
                     2º PRIMARIA
                   </h3>
@@ -50,7 +50,7 @@
           <div class="flex flex-col rounded-lg shadow-bg-3 overflow-hidden">
             <div class="flex-1 bg-white p-6 flex flex-col justify-between pb-16">
               <div class="flex-1">
-                <a href="/problemas?grado=3" class="block">
+                <a href="/lista-problemas?grado=3" class="block">
                   <h3 class="mt-2 text-xl leading-7 font-semibold text-yellow-900">
                     3º PRIMARIA
                   </h3>
@@ -64,7 +64,7 @@
           <div class="flex flex-col rounded-lg shadow-bg-4 overflow-hidden mt-6">
             <div class="flex-1 bg-white p-6 flex flex-col justify-between">
               <div class="flex-1">
-                <a href="/problemas?grado=4" class="block">
+                <a href="/lista-problemas?grado=4" class="block">
                   <h3 class="mt-2 text-xl leading-7 font-semibold text-red-900">
                     4º PRIMARIA
                   </h3>
@@ -78,7 +78,7 @@
         <div class="flex flex-col shadow-bg-5 rounded-lg shadow-bg- overflow-hidden mt-6">
           <div class="flex-1 bg-white p-6 flex flex-col justify-between">
             <div class="flex-1">
-              <a href="/problemas?grado=5" class="block">
+              <a href="/lista-problemas?grado=5" class="block">
                 <h3 class="mt-2 text-xl leading-7 font-semibold text-green-500">
                   5º PRIMARIA
                 </h3>
@@ -96,7 +96,7 @@
               <p class="text-sm leading-5 font-medium text-indigo-600">
                 <a href="#" class="hover:underline"> Case Study</a>
               </p>
-              <a href="/problemas?grado=6" class="block">
+              <a href="/lista-problemas?grado=6" class="block">
                 <h3 class="mt-2 text-xl leading-7 font-semibold text-blue-900">
                   6º PRIMARIA
                 </h3>
