--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,114 +1,117 @@
 <%- include("header") -%>
 
 <link rel="stylesheet" href="dashboard.css">
-<!--
-  Tailwind UI components require Tailwind CSS v1.8 and the @tailwindcss/ui plugin.
-  Read the documentation to get started: https://tailwindui.com/documentation
--->
-<div class="relative bg-blue-200 pt-16 pb-20 px-4 sm:px-6 lg:pt-24 lg:pb-28 lg:px-8 div-container">
-    <div class="absolute inset-0">
-      <div class="bg-white h-1/3 sm:h-2/3"></div>
+
+<%- include("../components/navbar") -%>
+
+<div class="bg-blue-200 pt-16 pb-20 px-4 sm:px-6 lg:pt-24 lg:pb-28 lg:px-8 div-container">
+  <div class="max-w-7xl mx-auto">
+    <div class="text-center">
+      <h2 class="text-3xl leading-9 tracking-tight font-extrabold text-gray-900 sm:text-4xl sm:leading-10">
+        GRADOOOOOOSS
+      </h2>
+      <p class="mt-3 max-w-2xl mx-auto text-xl leading-7 text-gray-500 sm:mt-4">
+        Selecciona el grado escolar del cual quieres revisar los temas
+      </p>
     </div>
-    <div class="relative max-w-7xl mx-auto">
-      <div class="text-center">
-        <h2 class="text-3xl leading-9 tracking-tight font-extrabold text-gray-900 sm:text-4xl sm:leading-10">
-           GRADOOOOOOSS
-        </h2>
-        <p class="mt-3 max-w-2xl mx-auto text-xl leading-7 text-gray-500 sm:mt-4">
-          Selecciona el grado escolar del cual quieres revisar los temas
-        </p>
-      </div>
-      <div class="mt-12 grid gap-5 max-w-md mx-auto lg:grid-cols-3 lg:max-w-6xl">
-        <div class="flex flex-col rounded-lg shadow-bg-1 shadow-lg overflow-hidden ">
-          <div class="flex-1 bg-white p-6 flex flex-col justify-between pb-16">
-            <div class="flex-1">
-              <a href="/lista-problemas?grado=1" class="block">
-                <h3 class="mt-2 text-xl leading-7 font-semibold text-orange-900">
-                  1º PRIMARIA
-                </h3>
-                <p class="mt-3 text-base leading-6 text-gray-500">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusantium praesentium eius, ut atque fuga culpa, similique sequi cum eos quis dolorum.
-                </p>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-col rounded-lg shadow-bg-2 overflow-hidden">
-            <div class="flex-1 bg-white p-6 flex flex-col justify-between pb-16">
-              <div class="flex-1">
-                <a href="/lista-problemas?grado=2" class="block">
-                  <h3 class="mt-2 text-xl leading-7 font-semibold text-purple-900">
-                    2º PRIMARIA
-                  </h3>
-                  <p class="mt-3 text-base leading-6 text-gray-500">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusantium praesentium eius, ut atque fuga culpa, similique sequi cum eos quis dolorum.
-                  </p>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="flex flex-col rounded-lg shadow-bg-3 overflow-hidden">
-            <div class="flex-1 bg-white p-6 flex flex-col justify-between pb-16">
-              <div class="flex-1">
-                <a href="/lista-problemas?grado=3" class="block">
-                  <h3 class="mt-2 text-xl leading-7 font-semibold text-yellow-900">
-                    3º PRIMARIA
-                  </h3>
-                  <p class="mt-3 text-base leading-6 text-gray-500">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusantium praesentium eius, ut atque fuga culpa, similique sequi cum eos quis dolorum.
-                  </p>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="flex flex-col rounded-lg shadow-bg-4 overflow-hidden mt-6">
-            <div class="flex-1 bg-white p-6 flex flex-col justify-between">
-              <div class="flex-1">
-                <a href="/lista-problemas?grado=4" class="block">
-                  <h3 class="mt-2 text-xl leading-7 font-semibold text-red-900">
-                    4º PRIMARIA
-                  </h3>
-                  <p class="mt-3 text-base leading-6 text-gray-500">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusantium praesentium eius, ut atque fuga culpa, similique sequi cum eos quis dolorum.
-                  </p>
-                </a>
-              </div>
-            </div>
-          </div>
-        <div class="flex flex-col shadow-bg-5 rounded-lg shadow-bg- overflow-hidden mt-6">
-          <div class="flex-1 bg-white p-6 flex flex-col justify-between">
-            <div class="flex-1">
-              <a href="/lista-problemas?grado=5" class="block">
-                <h3 class="mt-2 text-xl leading-7 font-semibold text-green-500">
-                  5º PRIMARIA
-                </h3>
-                <p class="mt-3 text-base leading-6 text-gray-500">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit facilis asperiores porro quaerat doloribus, eveniet dolore. Adipisci tempora aut inventore optio animi., tempore temporibus quo laudantium.
-                </p>
-              </a>
-            </div>
-            
-          </div>
-        </div>
-        <div class="flex flex-col rounded-lg shadow-bg-6 overflow-hidden mt-6">
-          <div class="flex-1 bg-white p-6 flex flex-col justify-between">
-            <div class="flex-1">
-              <p class="text-sm leading-5 font-medium text-indigo-600">
-                <a href="#" class="hover:underline"> Case Study</a>
+    <div class="mt-12 grid gap-5 max-w-md mx-auto lg:grid-cols-3 lg:max-w-6xl">
+      <div class="flex flex-col rounded-lg shadow-bg-1 shadow-lg overflow-hidden ">
+        <div class="flex-1 bg-white p-6 flex flex-col justify-between pb-16">
+          <div class="flex-1">
+            <a href="/lista-problemas?grado=1" class="block">
+              <h3 class="mt-2 text-xl leading-7 font-semibold text-orange-900">
+                1º PRIMARIA
+              </h3>
+              <p class="mt-3 text-base leading-6 text-gray-500">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusantium praesentium eius, ut
+                atque fuga culpa, similique sequi cum eos quis dolorum.
               </p>
-              <a href="/lista-problemas?grado=6" class="block">
-                <h3 class="mt-2 text-xl leading-7 font-semibold text-blue-900">
-                  6º PRIMARIA
-                </h3>
-                <p class="mt-3 text-base leading-6 text-gray-500">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint harum rerum voluptatem quo recusandae magni placeat saepe molestiae, sed excepturi cumque corporis perferendis hic.
-                </p>
-              </a>
-            </div>
-            
-            </div>
+            </a>
           </div>
         </div>
       </div>
+      <div class="flex flex-col rounded-lg shadow-bg-2 overflow-hidden">
+        <div class="flex-1 bg-white p-6 flex flex-col justify-between pb-16">
+          <div class="flex-1">
+            <a href="/lista-problemas?grado=2" class="block">
+              <h3 class="mt-2 text-xl leading-7 font-semibold text-purple-900">
+                2º PRIMARIA
+              </h3>
+              <p class="mt-3 text-base leading-6 text-gray-500">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusantium praesentium eius, ut
+                atque fuga culpa, similique sequi cum eos quis dolorum.
+              </p>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="flex flex-col rounded-lg shadow-bg-3 overflow-hidden">
+        <div class="flex-1 bg-white p-6 flex flex-col justify-between pb-16">
+          <div class="flex-1">
+            <a href="/lista-problemas?grado=3" class="block">
+              <h3 class="mt-2 text-xl leading-7 font-semibold text-yellow-900">
+                3º PRIMARIA
+              </h3>
+              <p class="mt-3 text-base leading-6 text-gray-500">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusantium praesentium eius, ut
+                atque fuga culpa, similique sequi cum eos quis dolorum.
+              </p>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="flex flex-col rounded-lg shadow-bg-4 overflow-hidden mt-6">
+        <div class="flex-1 bg-white p-6 flex flex-col justify-between">
+          <div class="flex-1">
+            <a href="/lista-problemas?grado=4" class="block">
+              <h3 class="mt-2 text-xl leading-7 font-semibold text-red-900">
+                4º PRIMARIA
+              </h3>
+              <p class="mt-3 text-base leading-6 text-gray-500">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto accusantium praesentium eius, ut
+                atque fuga culpa, similique sequi cum eos quis dolorum.
+              </p>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="flex flex-col shadow-bg-5 rounded-lg shadow-bg- overflow-hidden mt-6">
+        <div class="flex-1 bg-white p-6 flex flex-col justify-between">
+          <div class="flex-1">
+            <a href="/lista-problemas?grado=5" class="block">
+              <h3 class="mt-2 text-xl leading-7 font-semibold text-green-500">
+                5º PRIMARIA
+              </h3>
+              <p class="mt-3 text-base leading-6 text-gray-500">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit facilis asperiores porro quaerat
+                doloribus, eveniet dolore. Adipisci tempora aut inventore optio animi., tempore temporibus quo
+                laudantium.
+              </p>
+            </a>
+          </div>
+
+        </div>
+      </div>
+      <div class="flex flex-col rounded-lg shadow-bg-6 overflow-hidden mt-6">
+        <div class="flex-1 bg-white p-6 flex flex-col justify-between">
+          <div class="flex-1">
+            <p class="text-sm leading-5 font-medium text-indigo-600">
+              <a href="#" class="hover:underline"> Case Study</a>
+            </p>
+            <a href="/lista-problemas?grado=6" class="block">
+              <h3 class="mt-2 text-xl leading-7 font-semibold text-blue-900">
+                6º PRIMARIA
+              </h3>
+              <p class="mt-3 text-base leading-6 text-gray-500">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint harum rerum voluptatem quo recusandae
+                magni placeat saepe molestiae, sed excepturi cumque corporis perferendis hic.
+              </p>
+            </a>
+          </div>
+
+        </div>
+      </div>
     </div>
+  </div>
+</div>
 </div>
