--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,9 +15,9 @@
 
 <main class="max-w-7xl mx-auto pb-10 lg:py-12 lg:px-8">
   <div class="lg:grid lg:grid-cols-12 lg:gap-x-5">
-    <aside class="bg-blue-200 py-6 px-2 sm:px-6 lg:py-0 lg:px-0 lg:col-span-3">
-      <p class="text-center">Hola</p>
-    </aside>
+
+    <!-- side panel -->
+    <%- include("../components/panel") -%>
 
     <!-- Grados -->
     <%- include("../components/grades") -%>
