added some margin and padding

--- a/components/grades.ejs
+++ b/components/grades.ejs
@@ -1,5 +1,5 @@
 <div class="space-y-6 sm:px-6 lg:px-0 lg:col-span-9">
-    <div class="pb-20 px-4 sm:px-6 lg:pt-8 lg:pb-28 lg:px-8 div-container">
+    <div class="pb-20 px-4 sm:pt-12 sm:px-6 lg:pt-8 lg:pb-28 lg:px-8 div-container">
         <div class="max-w-7xl mx-auto">
             <div class="grid gap-5 max-w-sm mx-auto lg:grid-cols-3 lg:max-w-6xl">
                 <div class="flex flex-col rounded-lg shadow-bg-1 shadow-lg overflow-hidden ">
@@ -11,8 +11,7 @@
                                 </h3>
                                 <p class="mt-3 text-base leading-6 text-gray-500">
                                     Sumar y restar, contar de tanto en tanto, decenas y unidades, patrones de figuras,
-                                    medición de
-                                    longitud y más.
+                                    medición de longitud y más.
                                 </p>
                             </a>
                         </div>
