--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,7 +4,7 @@
 
 <%- include("../components/navbar") -%>
 
-<div class="mt-12 text-center">
+<div class="mt-12 text-center sm:mb-4">
   <h2 class="text-3xl leading-9 tracking-tight font-extrabold text-gray-900 sm:text-4xl sm:leading-10">
     GRADOS
   </h2>
