--- a/components/panel.ejs
+++ b/components/panel.ejs
@@ -1,3 +1,3 @@
-<aside class="bg-blue-200 py-6 px-2 sm:px-6 lg:py-0 lg:px-0 lg:col-span-3">
+<aside class="bg-blue-200 py-6 px-2 sm:pt-8 sm:px-6 lg:py-0 lg:px-0 lg:col-span-3">
     <p class="text-center">Aqui va algo no sabemos qué, solo puse background para distinguirlo</p>
 </aside>
