--- a/components/navbar.ejs
+++ b/components/navbar.ejs
@@ -1,3 +1,16 @@
+<style>
+    #options{
+        display: none;
+    }
+    #burger-menu {
+        display: none;
+    }
+    @media (min-width: 640px) {
+        #burger-menu {
+            display: none !important;
+        }
+    }
+</style>
 <nav class="bg-white shadow">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between h-16">
@@ -29,7 +42,7 @@
                         <button
                             class="flex text-sm border-2 border-transparent rounded-full focus:outline-none focus:border-gray-300 transition duration-150 ease-in-out"
                             id="user-menu" aria-label="User menu" aria-haspopup="true">
-                            <img class="h-8 w-8 rounded-full"
+                            <img class="h-8 w-8 rounded-full profile-pic" onclick="showOptions()"
                                 src="https://lumiere-a.akamaihd.net/v1/images/2b65901707e2087367946f7b7772fd8335c6c9e5.jpeg?region=0,0,600,600"
                                 alt="Profile picture">
                         </button>
@@ -44,7 +57,7 @@
                         From: "transform opacity-100 scale-100"
                         To: "transform opacity-0 scale-95"
                     -->
-                    <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg">
+                    <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg" id="options">
                         <div class="py-1 rounded-md bg-white shadow-xs" role="menu" aria-orientation="vertical"
                             aria-labelledby="user-menu">
                             <a href="#"
@@ -64,7 +77,7 @@
                 <!-- Mobile menu button -->
                 <button
                     class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 focus:text-gray-500 transition duration-150 ease-in-out"
-                    aria-label="Main menu" aria-expanded="false">
+                    aria-label="Main menu" aria-expanded="false" onclick="showBurgerMenu()"">
                     <!-- Icon when menu is closed. -->
                     <!-- 
                         Heroicon name: menu
@@ -95,7 +108,7 @@
       Menu open: "block", Menu closed: "hidden"
     -->
 
-    <div class="hidden sm:hidden">
+    <div class="hidden sm:hidden" id="burger-menu">
         <div class="pt-2 pb-3">
             <a href="#"
                 class="block pl-3 pr-4 py-2 border-l-4 border-indigo-500 text-base font-medium text-indigo-700 bg-indigo-50 focus:outline-none focus:text-indigo-800 focus:bg-indigo-100 focus:border-indigo-700 transition duration-150 ease-in-out">
@@ -128,3 +141,33 @@
         </div>
     </div>
 </nav>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script>
+
+    let isOptionsOpen = false;
+    function showOptions() {
+        var options = document.getElementById("options");
+        if (isOptionsOpen) {
+            options.style.display = "none";
+            isOptionsOpen = false;
+        }
+        else {
+            options.style.display = "block";
+            isOptionsOpen = true;
+        }
+    }
+
+    let isBurgerMenuOpen = false;
+    function showBurgerMenu() {
+        var burgerMenu = document.getElementById("burger-menu");
+        if (isBurgerMenuOpen) {
+            burgerMenu.style.display = "none";
+            isBurgerMenuOpen = false;
+        }
+        else {
+            burgerMenu.style.display = "block";
+            isBurgerMenuOpen = true;
+        }
+    }
+</script>
