--- a/components/inputAnswer.ejs
+++ b/components/inputAnswer.ejs
@@ -30,7 +30,7 @@
         
     </div>
 </div>
-<div>
+<aside>
     <div class="flex justify-center mb-5" id="single-answer">
         <input placeholder="Tu respuesta" type="text" name="answer" id="single-answer-input" class="bg-gray-200 w-10/12 h-16 rounded-lg mx-auto py-3 px-3 shadow-inner outline"/>
     </div>
@@ -53,7 +53,7 @@
             </button>
         <%   }  %>
     </div>
-</div>
+</aside>
 
 <script>
     $('.cerrar').on('click', function(){
@@ -71,52 +71,4 @@
         $('#multiple-answer-input').val($(this).attr('data-answer'));
     });
 
-    const submitRafagas = () =>{
-        console.log('calificar rafagas')
-    };
-
-
-    //verify submission 
-    const answer = "<%- problem.solution %>" ;
-    const problemType =  "<%- problem.type %>";
-    const problemAction = "<%- problemAction %>";
-
-    if (problemAction === 'rafaga') {
-        submitRafagas();
-    }
-    $('#submit').on('click', function(event) {
-        event.preventDefault();
-        $('#correct_banner').addClass('hidden');
-        $('#wrong_banner').addClass('hidden');
-        const inputAnswer = problemType === 'Abierta' ? '#single-answer-input' : '#multiple-answer-input';
-        var userAns = $(inputAnswer).val().trim();
-
-        if (answer === userAns) {
-            var info = {
-                problemId: "<%- problem._id %>"
-            };
-
-            $.post("/submit-answer", info, function(data) {
-                if (data) {
-                    showBanner('#correct_banner');
-                }
-            });
-        }
-        else {
-            showBanner('#wrong_banner');
-        }
-    });
-
-    const showBanner = bannerName =>{
-        // TODO: Verificar si el tipo de problema es rafaga o problema normal
-        // const isNormalProblem = "<%- problem.type %>";
-        // if (isNormalProblem){
-        //     $(bannerName).removeClass('hidden');
-        // }
-
-        
-        $(bannerName).removeClass('hidden'); // Este se debería de quitar una vez leyendo el tipo de problema
-    };
-
-    
 </script>
