--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -35,7 +35,7 @@
                     <div class="flex justify-between p-4">
                         <div>
                             <h1 class="text-md">Score</h1>
-                            <h1 class="text-xs"> <%= user.rankingPosition%>  </h>
+                            <h1 class="text-xs"> <%= user.score%>  </h>
                         </div>
                         <button id="edit-button" class="outline w-16 font-semibold text-xs text-white bg-green-700 border-2 py-1 px-2">
                             Editar
@@ -53,19 +53,19 @@
                     <hr class=" w-1/2 my-2 mx-auto">
                     <div class="flex justify-between mt-2">
                         <h1 class="text-green-700 font-semibold">Fácil</h1>
-                        <p>  <%= user.problemSetDifficulty.easy.length %>  </p>
+                        <p>  <%= user.problemSetDifficulty.easy %>  </p>
                     </div>
                     <div class="flex justify-between mt-1">
                         <p class="text-orange-500 font-semibold ">Medio</p>
-                        <p>  <%= user.problemSetDifficulty.medium.length %></p>
+                        <p>  <%= user.problemSetDifficulty.medium %></p>
                     </div>
                     <div class="flex justify-between mt-1">
                         <p class="text-red-600 font-semibold">Difícil</p>
-                        <p>  <%= user.problemSetDifficulty.hard.length %> </p>
+                        <p>  <%= user.problemSetDifficulty.hard %> </p>
                     </div>
                     <div class="flex justify-between mt-2">
                         <p class="font-semibold"> Totales  </p>
-                        <p> <%= user.problemSetDifficulty.easy.length + user.problemSetDifficulty.medium.length + user.problemSetDifficulty.hard.length %> </p>
+                        <p> <%= user.problemSetDifficulty.easy + user.problemSetDifficulty.medium + user.problemSetDifficulty.hard %> </p>
                     </div>
                 </aside>
 
@@ -89,29 +89,29 @@
                 <div class="flex flex-100 mx-8">
                     <div class="flex-grow mr-2">
                         <label class=" block mb-1 font-bold" for="">Nombre</label>
-                        <input class="bg-gray-200 w-full rounded-lg py-3 px-3 shadow-inner" type="text" name="name" id="name" value=<%=user.name%>>
+                        <input class="bg-gray-200 w-full rounded-lg py-3 px-3 shadow-inner outline" type="text" name="name" id="name" value=<%=user.name%>>
                     </div>
                     <div class="flex-grow ml-2">
                         <label class=" block mb-1 font-bold" for="">Apellido</label>
-                        <input class="bg-gray-200 w-full rounded-lg py-3 px-3 shadow-inner" type="text" name="lastName", id="lastName" value=<%=user.lastName%>>
+                        <input class="bg-gray-200 w-full rounded-lg py-3 px-3 shadow-inner outline" type="text" name="lastName", id="lastName" value=<%=user.lastName%>>
                     </div>
                 </div>
                 <div class="flex flex-100 mt-4 mx-8">
                     <div class="flex-grow mr-2">
                         <label class=" block mb-1 font-bold" for="">Escuela</label>
-                        <input class="bg-gray-200 w-full rounded-lg py-3 px-3 shadow-inner" type="text"  name="school", id="school" value=<%=user.school%>>
+                        <input class="bg-gray-200 w-full rounded-lg py-3 px-3 shadow-inner outline" type="text"  name="school", id="school" value=<%=user.school%>>
                     </div>
                 </div>
                 <div class="flex flex-100 mx-8">
                     <div class="flex-grow mr-2">
                         <label class=" block mb-1 font-bold" for="">Correo electrónico</label>
-                        <input class="bg-gray-400 w-full rounded-lg py-3 px-3 shadow-inner cursor-not-allowed" type="email"  name="email", id="email" disabled value=<%=user.email%>>
+                        <input class="bg-gray-400 w-full rounded-lg py-3 px-3 shadow-inner cursor-not-allowed outline" type="email"  name="email", id="email" disabled value=<%=user.email%>>
                     </div>
                 </div>
                 <div class="flex flex-100 mt-4 mx-8">
                     <div class="flex-grow mr-2">
                         <label class=" block mb-1 font-bold" for="">Nueva contraseña</label>
-                        <input class="bg-gray-200 w-full rounded-lg py-3 px-3 shadow-inner" type="password" name="password", id="password" >
+                        <input class="bg-gray-200 w-full rounded-lg py-3 px-3 shadow-inner outline" type="password" name="password", id="password" >
                     </div>
                 </div>
                 <div class="flex justify-center flex-100 mt-4 mx-8 mb-8">
@@ -131,9 +131,9 @@
     userInfo = JSON.parse(userInfo);
     const { problemSetDifficulty } = userInfo;
 
-    const easy = problemSetDifficulty.easy.length;
-    const medium = problemSetDifficulty.easy.length;
-    const hard = problemSetDifficulty.easy.length;
+    const easy = problemSetDifficulty.easy;
+    const medium = problemSetDifficulty.easy;
+    const hard = problemSetDifficulty.easy;
 
     const ctx = document.getElementById('myChart');
     const DoughnutData = {
