Feature: rafaga style

--- a/components/inputAnswer.ejs
+++ b/components/inputAnswer.ejs
@@ -1,4 +1,4 @@
-<h1 class="ml-5 mt-3 mb-5 font-semibold">RESPUESTA</h1>
+<h1 class="ml-5 mt-3 mb-5 font-bold">RESPUESTA</h1>
 
 <div id="wrong_banner" class="hidden w-2/4 mx-auto relative text-center rounded-lg py-2 mb-5 banner border-solid border-4 border-gray-600">
     <h1 class="text-center text-2xl">Upss, ¡Intenta de nuevo!</h1>
@@ -37,9 +37,9 @@
 
     <div class="flex justify-around flex-row flex-wrap my-5 " id="multiple-answer">
         <input type="text" value="" class="hidden" id="multiple-answer-input">
-        <div class="flex items-center justify-center w-5/12 my-2 h-16 rounded-lg hover:shadow-outline shadow-answer option-card" data-answer="hola1"> Respuesta 1 </div>
-        <div class="flex items-center justify-center w-5/12 my-2 h-16 rounded-lg hover:shadow-outline shadow-answer option-card" data-answer="hola2"> Respuesta 2 </div>
-        <div class="flex items-center justify-center w-5/12 my-2 h-16 rounded-lg hover:shadow-outline shadow-answer option-card" data-answer="hola3"> Respuesta 3 </div>
+        <div class="flex items-center justify-center w-5/12 my-2 h-16 rounded-lg hover:shadow-outline shadow-answer option-card bg-blue-100" data-answer="hola1"> Respuesta 1 </div>
+        <div class="flex items-center justify-center w-5/12 my-2 h-16 rounded-lg hover:shadow-outline shadow-answer option-card bg-blue-100" data-answer="hola2"> Respuesta 2 </div>
+        <div class="flex items-center justify-center w-5/12 my-2 h-16 rounded-lg hover:shadow-outline shadow-answer option-card bg-blue-100" data-answer="hola3"> Respuesta 3 </div>
     </div>
 
     <div class="flex justify-center mb-3">
