--- a/views/problem/rafaga.ejs
+++ b/views/problem/rafaga.ejs
@@ -12,12 +12,21 @@
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         }
         .selected-answer{
-            border: 2px solid #558888;
-            background-color: #b2f5ea;
+            border: 2px solid rgb(120, 53, 15);
+            background-color: rgb(217, 119, 6);
+            color: white;
+            font-weight: bold;
+        }
+        .pestana{
+            border: 5px solid bisque;
         }
     </style>
 </head>
 <body class="bg-blue-100">
+
+    <a href="/home">
+        <i class="fas fa-arrow-left text-4xl mt-5 ml-5 mb-3"></i>
+    </a>
 
     <aside id="finalPointsBanner" class="bg-white w-1/4 mx-auto p-4 text-center shadow-lg rounded-lg mt-5 hidden">
         ¡Obtuviste <span id="finalPoints">0</span> puntos!
@@ -25,12 +34,12 @@
 
     <% rafagas.forEach((rafaga, index) => {  %>
         <% if (index > 0) {  %>
-            <main class="w-full md:w-9/12 mx-auto p-3 mt-5 bg-white rounded-lg shadow-lg hidden" id=<%=`inputAnswer-${index}` %> data-index= <%=index%>  >
+            <main class="w-full md:w-9/12 mx-auto p-3 mt-5 bg-white rounded-lg pestana hidden" id=<%=`inputAnswer-${index}` %> data-index= <%=index%>  >
         <% } else {   %>
-            <main class="w-full md:w-9/12 mx-auto p-3 mt-5 bg-white rounded-lg shadow-lg" id=<%=`inputAnswer-${index}` %> data-index= <%=index%> >
+            <main class="w-full md:w-9/12 mx-auto p-3 mt-5 bg-white rounded-lg pestana" id=<%=`inputAnswer-${index}` %> data-index= <%=index%> >
         <% }  %>
-                <h1 class="italic text-center text-xl"> <%= rafaga.description %>  </h1>
-                <div class="shadow-answer rounded-lg p-3 my-4 w-9/12 mx-auto">
+                <h1 class="italic text-center text-xl mt-3"> <%= rafaga.description %>  </h1>
+                <div class="p-3 my-4 w-9/12 mx-auto">
                     <%- include("../../components/inputAnswer", {problem: rafaga, length, index, problemAction}) -%>
                 </div>
             </main>
