Feature: Fix most responsive views and check navbar

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -16,8 +16,8 @@
 <main class="max-w-7xl mx-auto pb-10 lg:py-12 lg:px-8">
   <div class="lg:grid lg:grid-cols-12 lg:gap-x-5">
 
-    <!-- side panel -->
-    <%- include("../components/panel") -%>
+    <!-- side panel
+    <%- include("../components/panel") -%> -->
 
     <!-- Grados -->
     <%- include("../components/grades") -%>
