--- a/views/problem/rafaga.ejs
+++ b/views/problem/rafaga.ejs
@@ -24,9 +24,7 @@
 </head>
 <body class="bg-blue-100">
 
-    <a href="/home">
-        <i class="fas fa-arrow-left text-4xl mt-5 ml-5 mb-3"></i>
-    </a>
+    <%- include("./../../components/navbar") -%>
 
     <aside id="finalPointsBanner" class="bg-white w-1/4 mx-auto p-4 text-center shadow-lg rounded-lg mt-5 hidden">
         ¡Obtuviste <span id="finalPoints">0</span> puntos!
