--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -19,9 +19,11 @@
 </head>
 <body class="bg-blue-100">
 
-    <div class="flex justify-between mt-3">
+    <%- include("./../../components/navbar") -%>
 
-        <section class="w-1/5 mx-4 px-3 rounded-lg">
+    <div class="flex justify-between flex-col md:flex-row mt-3">
+
+        <section class="w-11/12 md:w-1/5 mx-auto md:mx-0 mb-4 md:mb-0 md:px-3 rounded-lg">
             <div class="flex items-center justify-center shadow-lg">
                 <div class="bg-white rounded-lg">
                     <div class="flex items-center justify-center flex-col">
@@ -29,7 +31,7 @@
                         <h1 class="text-gray-500 text-sm"> <%= user.email%>  </h>
                     </div>
                     <div class="w-1/2 mx-auto my-3">
-                        <img src="img/user.jpg" alt="user-img" className="h-full w-full object-cover" />
+                        <img src="img/spider.jpg" alt="user-img" className="h-full w-full object-cover" />
                     </div>
                     
                     <div class="flex justify-between p-4">
@@ -45,7 +47,7 @@
             </div>
         </section>
     
-        <section id="profile-info" class="w-3/4 mx-4 pt-3 bg-white rounded-lg shadow-lg">
+        <section id="profile-info" class="w-11/12 md:w-3/4 mx-auto md:mx-0 pt-3 bg-white rounded-lg shadow-lg">
             <div class="flex flex-col lg:flex-row items-center justify-around mt-5">
 
                 <aside class="bg-white rounded-lg shadow-lg w-fixed p-2 h-40">
@@ -84,7 +86,7 @@
             
         </section>
 
-        <section id="profile-edit" class="w-3/4 mx-4 pt-3 bg-white rounded-lg shadow-lg hidden">
+        <section id="profile-edit" class="w-11/12 md:w-3/4 mx-auto md:mx-0 pt-3 bg-white rounded-lg shadow-lg hidden">
             <form class="flex-100" action="/profile" method="POST" name="editProfileForm">
                 <div class="flex flex-100 mx-8">
                     <div class="flex-grow mr-2">
