--- a/views/ranking/ranking.ejs
+++ b/views/ranking/ranking.ejs
@@ -10,9 +10,7 @@
 </head>
 <body class="bg-blue-100">
 
-    <a href="/home">
-        <i class="fas fa-arrow-left text-4xl mt-5 ml-5 mb-3"></i>
-    </a>
+    <%- include("./../../components/navbar") -%>
 
     <div class="flex items-end flex-wrap w-5/6 md:w-1/3 mx-auto mt-5 text-center">
         <div class="w-1/3 font-semibold uppercase bg-yellow-500 h-32"> 
